[package]
name = "meilisearch-core"
version = "0.16.0"
license = "MIT"
authors = ["Kerollmops <clement@meilisearch.com>"]
edition = "2018"

[dependencies]
arc-swap = "0.4.5"
bincode = "1.2.1"
byteorder = "1.3.4"
chrono = { version = "0.4.19", features = ["serde"] }
compact_arena = "0.4.0"
cow-utils = "0.1.2"
crossbeam-channel = "0.5.0"
deunicode = "1.1.0"
either = "1.5.3"
env_logger = "0.7.1"
fst = "0.4.4"
hashbrown = { version = "0.9.0", features = ["serde"] }
heed = "0.8.0"
indexmap = { version = "1.3.2", features = ["serde-1"] }
intervaltree = "0.2.5"
itertools = "0.9.0"
levenshtein_automata = { version = "0.2.0", features = ["fst_automaton"] }
log = "0.4.8"
meilisearch-error = { path = "../meilisearch-error", version = "0.16.0" }
meilisearch-schema = { path = "../meilisearch-schema", version = "0.16.0" }
meilisearch-tokenizer = { path = "../meilisearch-tokenizer", version = "0.16.0" }
meilisearch-types = { path = "../meilisearch-types", version = "0.16.0" }
once_cell = "1.3.1"
ordered-float = { version = "2.0.0", features = ["serde"] }
pest = { git = "https://github.com/pest-parser/pest.git", rev = "51fd1d49f1041f7839975664ef71fe15c7dcaf67" }
pest_derive = "2.0"
regex = "1.4.1"
sdset = "0.4.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0.59", features = ["preserve_order"] }
slice-group-by = "0.2.6"
unicase = "2.6.0"
zerocopy = "0.3.0"

[dev-dependencies]
assert_matches = "1.4.0"
criterion = "0.3.1"
csv = "1.1.3"
rustyline = { version = "6.0.0", default-features = false }
structopt = "0.3.20"
tempfile = "3.1.0"
termcolor = "1.1.0"

[target.'cfg(unix)'.dev-dependencies]
jemallocator = "0.3.2"

[[bench]]
name = "search_benchmark"
harness = false
