[package]
name = "meilisearch-error"
version = "0.26.0"
authors = ["marin <postma.marin@protonmail.com>"]
edition = "2021"

[dependencies]
actix-web = { version = "4.0.1", default-features = false }
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

[features]
test-traits = ["proptest", "proptest-derive"]
